add support for cross-roads + better link resolve

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 TREASURE_FINDER_URI=https://clement-gouin.github.io/treasure-finder/
 ON_THE_QUIZZ_URI=https://clement-gouin.github.io/on-the-quizz/
+CROSS_ROADS_URI=https://clement-gouin.github.io/cross-roads/
 SHLINK_API_URI=https://s.test/rest/v3
 SHLINK_API_KEY=secret
