use all available z-apps

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-TREASURE_FINDER_URI=https://clement-gouin.github.io/treasure-finder/
-ON_THE_QUIZZ_URI=https://clement-gouin.github.io/on-the-quizz/
-CROSS_ROADS_URI=https://clement-gouin.github.io/cross-roads/
+APPS="https://github.com/clement-gouin/z-app
+https://github.com/clement-gouin/z-treasure-finder
+https://github.com/clement-gouin/z-on-the-quizz
+https://github.com/clement-gouin/z-cross-roads
+https://github.com/clement-gouin/z-dice-roller"
 SHLINK_API_URI=https://s.test/rest/v3
 SHLINK_API_KEY=secret
